--- a/style.css
+++ b/style.css
@@ -102,9 +102,37 @@ body {
 .logo-txt {
   font-size: 24px;
   color: var(--header-nav-text);
+  opacity: 90%;
 }
 
 /* Header */
+
+.cart-icon {
+  font-size: 22px;
+}
+
+#count-container {
+  position: absolute;
+  right: 8px;
+  bottom: 10px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--header-nav-text-hover);
+}
+
+#count-container #cart-item-count {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 12px;
+  text-align: center;
+}
 
 header {
   display: flex;
@@ -127,6 +155,7 @@ header > a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 #navbar li {
@@ -1077,6 +1106,8 @@ footer .copyright {
 #contact-details .map iframe {
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+  box-shadow: 2px 2px 13px rgba(0, 0, 0, 0.2);
 }
 
 #form-details {
@@ -1132,4 +1163,130 @@ footer .copyright {
   font-size: 16px;
   font-weight: 600;
   color: #000;
+}
+
+/* cart page */
+
+#cart {
+  overflow-x: auto;
+}
+
+#cart i {
+  color: var(--header-nav-text);
+  font-size: 18px;
+}
+
+#cart table {
+  width: 100%;
+  border-collapse: collapse;
+  white-space: nowrap;
+}
+
+#cart table img {
+  width: 70px;
+}
+
+#cart table td,
+#cart table th {
+  padding: 0 50px 0 50px;
+}
+
+#cart table td:nth-child(1) {
+  width: 100px;
+  text-align: center;
+}
+
+#cart table td:nth-child(2) {
+  width: 150px;
+  text-align: center;
+}
+
+#cart table td:nth-child(3) {
+  width: 250px;
+  text-align: center;
+}
+
+#cart table td:nth-child(4),
+#cart table td:nth-child(5),
+#cart table td:nth-child(6) {
+  width: 150px;
+  text-align: center;
+}
+
+#cart table td:nth-child(5) input {
+  width: 70px;
+  padding: 10px 5px 10px 15px;
+}
+
+#cart table thead {
+  border: 1px solid #e2e9e1;
+  border-left: none;
+  border-right: none;
+}
+
+#cart table thead th {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding: 18px 0;
+}
+
+#cart table tbody tr td {
+  padding-top: 15px;
+}
+
+#cart table tbody td {
+  font-size: 13px;
+}
+
+#cart-add {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#coupon {
+  width: 50%;
+  margin-bottom: 30px;
+  padding-top: 20px;
+}
+
+#coupon h3,
+#subtotal h3 {
+  padding-bottom: 15px;
+}
+
+#coupon input {
+  padding: 10px 20px;
+  outline: none;
+  width: 60%;
+  margin-right: 10px;
+  border: 1px solid #e2e9e1;
+}
+
+#coupon button,
+#subtotal button {
+  background: var(--header-nav-text-hover);
+  color: white;
+  padding: 12px 20px;
+}
+
+#subtotal {
+  width: 50%;
+  margin-bottom: 30px;
+  border: 1px solid #e1e9e1;
+  padding: 30px;
+}
+
+#subtotal table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#subtotal table td {
+  width: 50%;
+  border: 1px solid #e2e9e1;
+  padding: 10px;
+  font-size: 13px;
 }
