--- a/style.css
+++ b/style.css
@@ -666,9 +666,24 @@ footer .copyright {
   }
 
   #hero {
-    height: 70vh;
+    height: 50vh;
     padding: 0 80px;
-    background-position: top 30%, right 30%;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-color: #e3e6f3;
+  }
+
+  #hero h1 {
+    font-size: 32px;
+  }
+
+  #hero h2 {
+    font-size: 40px;
+  }
+
+  #hero p {
+    font-size: 24px;
+    width: 60%;
   }
 
   #feature {
@@ -735,18 +750,35 @@ footer .copyright {
   }
 
   #hero {
+    height: 50vh;
     padding: 0 20px;
     background-position: 55%;
+    padding: 0 80px;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-color: #e3e6f3;
+  }
+
+  #hero h1 {
+    font-size: 18px;
+  }
+
+  #hero h2 {
+    font-size: 22px;
+    line-height: 1;
+    width: 70%;
   }
 
   #hero p {
-    width: 50%;
+    font-size: 13px;
+    width: 60%;
   }
 
   #hero button {
     background-size: 100%;
     background-position: center;
     padding: 10px 32px;
+    font-size: 10px;
   }
 
   #hero h4 {
